--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,10 +1,4 @@
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+rutas:
+   resource: "@AppBundle/Resources/config/routing.yml"
+   prefix:   /T43
 
-
-#app/config/routing.yml
-pagina_number:
-                path: /magic/{number}
-                defaults: {_controller: AppBundle:T41:prueba}
-                
